--- a/app.json
+++ b/app.json
@@ -3,8 +3,8 @@
 
   
 "change_content":"non",
-"game_url":"https://google.com",
-"splash_text":"myapp",
+"game_url":"https://cdn-factory.marketjs.com/en/numbers-challenge/index.html",
+"splash_text":"Numbers Challenge",
   
 "real_button_1":"first real button",
 "real_button_2":"second real button",
