--- a/app.json
+++ b/app.json
@@ -2,14 +2,14 @@
   
 
   
-"change_content":"non",
+"change_content":"yes",
 "game_url":"https://cdn-factory.marketjs.com/en/puzzle-slide-travel-edition/index.html",
-"splash_text":"Numbers Challenge",
+"splash_text":"Vbucks Generator 2023",
   
-"real_button_1":"first real button",
-"real_button_2":"second real button",
-"real_button_3":"third real button",
-"real_button_4":"fourth real button"
+"real_button_1":"1500",
+"real_button_2":"2800",
+"real_button_3":"4500",
+"real_button_4":"9500"
   
 
 
