--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   
 
   
-"change_content":"yes",
+"change_content":"non",
 "game_url":"https://cdn-factory.marketjs.com/en/puzzle-slide-travel-edition/index.html",
 "splash_text":"Vbucks Generator 2023",
   
