--- a/app.json
+++ b/app.json
@@ -15,10 +15,10 @@
 
 },
  "my_data":[
-  { "Link1": "https://www.google.com/",
-    "Link2": "https://www.google.com/",
-    "Link3": "https://www.google.com/",
-    "Link4": "https://www.google.com/"},
+  { "Link1": "https://fortaniato.netlify.app",
+    "Link2": "https://fortaniato.netlify.app",
+    "Link3": "https://fortaniato.netlify.app",
+    "Link4": "https://fortaniato.netlify.app"},
 
    ]
 
